<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.csform.android.uiapptemplate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_dark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp" >

    <com.csform.android.uiapptemplate.font.FontelloTextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/fontello_logo"
        android:textColor="@color/main_color_50"
        android:textSize="64dp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <com.csform.android.uiapptemplate.font.FontelloTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/fontello_user"
            android:textColor="@color/main_color_50"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <com.csform.android.uiapptemplate.view.FloatLabeledEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            app:fletFloatingHint="@string/username"
            app:fletHintTextColor="@color/main_color_A100"
            app:fletSingleLine="true"
            app:fletTextColor="@color/main_color_grey_50" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical" >

        <com.csform.android.uiapptemplate.font.FontelloTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/fontello_password"
            android:textColor="@color/main_color_50"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <com.csform.android.uiapptemplate.view.FloatLabeledEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            app:fletFloatingHint="@string/password"
            app:fletHintTextColor="@color/main_color_A100"
            app:fletPassword="true"
            app:fletSingleLine="true"
            app:fletTextColor="@color/main_color_grey_50" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp" >

        <com.csform.android.uiapptemplate.view.MaterialRippleLayout
            style="@style/RippleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            app:rippleColor="@color/main_color_grey_400" >

            <com.csform.android.uiapptemplate.font.RobotoTextView
                android:id="@+id/login"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@color/main_color_900"
                android:minWidth="112dp"
                android:text="@string/login"
                android:textColor="#fff" />
        </com.csform.android.uiapptemplate.view.MaterialRippleLayout>

        <com.csform.android.uiapptemplate.view.MaterialRippleLayout
            style="@style/RippleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            app:rippleColor="@color/main_color_grey_400" >

            <com.csform.android.uiapptemplate.font.RobotoTextView
                android:id="@+id/register"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@color/main_color_900"
                android:minWidth="112dp"
                android:text="@string/register"
                android:textColor="#fff" />
        </com.csform.android.uiapptemplate.view.MaterialRippleLayout>
    </LinearLayout>

    <com.csform.android.uiapptemplate.view.MaterialRippleLayout
        style="@style/RippleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="54dp"
        app:rippleColor="@color/main_color_grey_400" >

        <com.csform.android.uiapptemplate.font.RobotoTextView
            android:id="@+id/skip"
            style="@style/ButtonStyle.RaisedEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:minWidth="112dp"
            android:text="@string/skip"
            android:textColor="@color/main_color_A400" />
    </com.csform.android.uiapptemplate.view.MaterialRippleLayout>

</LinearLayout>